Fixed picture spacing

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -214,10 +214,10 @@ h2 {
     flex-direction: row;
     align-items: center;
     text-align: center;
-    justify-content: flex-start;
+    justify-content: center;
     margin-top: 20px;
     margin-bottom: 20px;
-    margin-left: 200px;
+    /* margin-left: 200px; */
 }
 
 .img-description {
@@ -570,8 +570,8 @@ h4 {
 }
 
 .svc-image {
-    height: 200px;
-    width: 300px;
+    height: 250px;
+    width: 350px;
     margin: 20px;
 }
 
